--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,13 @@ authors = [
   "xenua <git@xenua.me>",
 ]
 readme = "README.md"
+license = "MIT"
+repository = "https://github.com/0x18050e1501/kataria"
+classifiers = [
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Rust",
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
